dev 84 fix white/dark mode

--- a/src/components/input/input.module.css
+++ b/src/components/input/input.module.css
@@ -78,7 +78,7 @@
   position: relative;
   bottom: 0;
   line-height: 25px;
-  color: #f6f6f6;
+  color: var(--text-color);
   font-size: 14px;
   font-weight: 500;
 }
