--- a/src/dashboardNew/components/button/button.module.css
+++ b/src/dashboardNew/components/button/button.module.css
@@ -32,4 +32,5 @@
   position: relative;
   z-index: 2;
   padding-top: 2px;
+  color: var(--text-color);
 }
